SCSS разработка блока hero

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -54,7 +54,7 @@ a {
     color: inherit;
 
     @include hover {
-        color: var(--color-accent);
+        color: var(--color-pink);
     }
 
     &[class] {
