--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,6 @@ svg * {
   --color-blue-line: #2A407C;
   --color-pink: #EF2A82;
   --color-violet: #7B61FF;
-  --color-accent: rgba(239, 42, 131, 0.7);
   --border-base: 0.0625rem solid var(--color-blue-line);
   --shadow: 0 1.125rem 3.125rem -0.9375rem rgba(25, 42, 89, 0.2);
   --shadow-card: 0 1.125rem 3.125rem -0.9375rem #060f28;
@@ -231,12 +230,12 @@ a {
 }
 @media (any-hover: hover) {
   a:hover {
-    color: var(--color-accent);
+    color: var(--color-pink);
   }
 }
 @media (any-hover: none) {
   a:active {
-    color: var(--color-accent);
+    color: var(--color-pink);
   }
 }
 a[class] {
@@ -248,6 +247,438 @@ a[class] {
   border-radius: 0.3125rem;
   outline-offset: 0.25rem;
   transition-duration: 0s !important;
+}
+
+.hero {
+  position: relative;
+  overflow: hidden;
+  background-color: var(--color-gray-white);
+}
+.hero::before {
+  width: 41.25rem;
+  height: 41.25rem;
+  content: "";
+  position: absolute;
+  z-index: 6;
+  top: -16.25rem;
+  left: -6.25rem;
+  background: url("../img/hero/hero-bg-small.svg") center/contain no-repeat;
+}
+@media (width <= 47.99875rem) {
+  .hero::before {
+    display: none;
+  }
+}
+.hero__body {
+  display: flex;
+  justify-content: center;
+  padding-top: 10.3125rem;
+  padding-bottom: 5.9375rem;
+  padding-left: calc((100vw - 76.25rem) / 2);
+  margin-inline: 1.25rem;
+}
+@media (width <= 63.99875rem) {
+  .hero__body {
+    flex-direction: column-reverse;
+    row-gap: 1.625rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .hero__body {
+    padding-top: 6.25rem;
+    padding-bottom: 7.8125rem;
+  }
+}
+.hero__body::before, .hero__body::after {
+  content: "";
+  position: absolute;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.hero__body::before {
+  background-color: var(--color-pink);
+  clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%);
+}
+@media (width <= 63.99875rem) {
+  .hero__body::before {
+    clip-path: polygon(0 0, 100% 0, 100% 92%, 0% 100%);
+  }
+}
+.hero__body::after {
+  background-color: var(--color-dark-blue-1);
+  clip-path: polygon(0 0, 100% 0, 100% 68%, 0% 98%);
+}
+@media (width <= 63.99875rem) {
+  .hero__body::after {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 98%);
+  }
+}
+.hero__content {
+  position: relative;
+  z-index: 7;
+  max-width: 34.375rem;
+  padding-top: 4.875rem;
+  margin-right: 9.375rem;
+}
+@media (width <= 90.06125rem) {
+  .hero__content {
+    margin-right: 1.875rem;
+  }
+}
+@media (width <= 63.99875rem) {
+  .hero__content {
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+  }
+}
+.hero__title:not(:last-child) {
+  margin-bottom: 0.9375rem;
+}
+.hero__description:not(:last-child) {
+  margin-bottom: 3.0625rem;
+}
+@media (width <= 63.99875rem) {
+  .hero__description:not(:last-child) {
+    margin-bottom: 1.625rem;
+  }
+}
+.hero__button {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  text-wrap: nowrap;
+  color: var(--color-white);
+  background-color: var(--color-pink);
+  border-radius: 4.25rem;
+  padding: 0.96875rem 5rem;
+  justify-self: left;
+}
+@media (any-hover: hover) {
+  .hero__button:hover {
+    color: var(--color-dark-blue-1);
+    background-color: var(--color-white);
+  }
+}
+@media (any-hover: none) {
+  .hero__button:active {
+    color: var(--color-dark-blue-1);
+    background-color: var(--color-white);
+  }
+}
+@media (width <= 30.06125rem) {
+  .hero__button {
+    justify-self: stretch;
+  }
+}
+.hero__image {
+  position: relative;
+  z-index: 7;
+}
+.hero__image:before {
+  content: "";
+  position: absolute;
+  top: 7.75rem;
+  left: -4.3125rem;
+  width: 22.5rem;
+  height: 15.3125rem;
+  background: url("../img/hero/hero-graphs-small.svg") center/contain no-repeat;
+  box-shadow: var(--shadow);
+  border-radius: 1.875rem;
+}
+@media (width <= 90.06125rem) {
+  .hero__image:before {
+    display: none;
+  }
+}
+.hero__image img {
+  box-shadow: var(--shadow);
+  border-radius: 1.875rem;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  animation-name: scrolling-header;
+  animation-fill-mode: both;
+  animation-timeline: scroll();
+  animation-range: 3.125rem 12.5rem;
+  padding-top: 3.125rem;
+}
+@media (width <= 47.99875rem) {
+  .header {
+    animation-range: 1.25rem 3.125rem;
+  }
+}
+@keyframes scrolling-header {
+  to {
+    background-color: var(--color-dark-blue-1);
+    box-shadow: 0 0 1rem 0 black;
+    padding-block: 1.25rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .header {
+    padding-block: 1.25rem;
+  }
+}
+.header__inner {
+  display: flex;
+  align-items: center;
+}
+@media (width <= 63.99875rem) {
+  .header__inner {
+    flex-direction: column;
+    row-gap: 0.625rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .header__inner {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+@media (width <= 30.06125rem) {
+  .header__logo svg {
+    width: 8.75rem;
+    height: 1.875rem;
+  }
+}
+.header__body {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 1.25rem;
+  width: 100%;
+  margin-left: 5.125rem;
+}
+@media (width <= 63.99875rem) {
+  .header__body {
+    margin: 0;
+  }
+}
+@media (width <= 47.99875rem) {
+  .header__body {
+    justify-content: initial;
+    column-gap: 1.125rem;
+    width: auto;
+  }
+}
+@media (width <= 47.99875rem) {
+  .header__overlay {
+    position: fixed;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 3rem;
+    padding: 1rem;
+    background-color: var(--color-dark-blue-1);
+    transition-duration: var(--transition-duration);
+  }
+  .header__overlay:not(.is-active) {
+    opacity: 0;
+    visibility: hidden;
+    translate: 100%;
+  }
+}
+.header__menu-list {
+  display: flex;
+  column-gap: 2.25rem;
+  row-gap: 0.3125rem;
+}
+@media (width <= 47.99875rem) {
+  .header__menu-list {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1.25rem;
+  }
+}
+.header__menu-link {
+  font-size: 1.125rem;
+}
+.header__buttons-login {
+  display: flex;
+  align-items: center;
+  column-gap: 2.5rem;
+}
+.header__sign-in-button, .header__sign-up-button {
+  font-size: 1rem;
+  color: var(--color-gray-blue);
+  background-color: transparent;
+  padding: 0;
+}
+.header__sign-in-button {
+  border: none;
+}
+@media (any-hover: hover) {
+  .header__sign-in-button:hover {
+    color: var(--color-pink);
+  }
+}
+@media (any-hover: none) {
+  .header__sign-in-button:active {
+    color: var(--color-pink);
+  }
+}
+.header__sign-up-button {
+  border: var(--border-base);
+  border-radius: 4.25rem;
+  padding: 0.65625rem 3.3125rem;
+}
+@media (any-hover: hover) {
+  .header__sign-up-button:hover {
+    color: var(--color-white);
+    background-color: var(--color-pink);
+    border-color: var(--color-pink);
+  }
+}
+@media (any-hover: none) {
+  .header__sign-up-button:active {
+    color: var(--color-white);
+    background-color: var(--color-pink);
+    border-color: var(--color-pink);
+  }
+}
+@media (width <= 47.99875rem) {
+  .header__sign-up-button {
+    display: none;
+  }
+}
+
+.burger-button {
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.375rem;
+  position: relative;
+  z-index: 2;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+@media (any-hover: hover) {
+  .burger-button:hover .burger-button__line {
+    background-color: var(--color-pink);
+  }
+}
+@media (any-hover: none) {
+  .burger-button:active .burger-button__line {
+    background-color: var(--color-pink);
+  }
+}
+.burger-button.is-active .burger-button__line:nth-child(1) {
+  animation: firstLineToCross 0.2s ease-in-out forwards;
+}
+.burger-button.is-active .burger-button__line:nth-child(2) {
+  animation: secondLineFade 0.2s ease-in-out forwards;
+}
+.burger-button.is-active .burger-button__line:nth-child(3) {
+  animation: thirdLineToCross 0.2s ease-in-out forwards;
+}
+.burger-button:not(.is-active) .burger-button__line:nth-child(1) {
+  animation: firstLineToBurger 0.2s ease-in-out forwards;
+}
+.burger-button:not(.is-active) .burger-button__line:nth-child(2) {
+  animation: secondLineShow 0.2s ease-in-out forwards;
+}
+.burger-button:not(.is-active) .burger-button__line:nth-child(3) {
+  animation: thirdLineToBurger 0.2s ease-in-out forwards;
+}
+.burger-button__line {
+  display: block;
+  width: 1.5rem;
+  height: 0.1875rem;
+  background-color: var(--color-gray-blue);
+}
+@keyframes firstLineToCross {
+  0% {
+    transform: translateY(0) rotate(0);
+  }
+  50% {
+    transform: translateY(0.5625rem) rotate(0);
+  }
+  100% {
+    transform: translateY(0.5625rem) rotate(45deg);
+  }
+}
+@keyframes secondLineFade {
+  0% {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+  50% {
+    opacity: 0;
+    transform: scaleX(0);
+  }
+  100% {
+    opacity: 0;
+    transform: scaleX(0);
+  }
+}
+@keyframes thirdLineToCross {
+  0% {
+    transform: translateY(0) rotate(0);
+  }
+  50% {
+    transform: translateY(-0.5625rem) rotate(0);
+  }
+  100% {
+    transform: translateY(-0.5625rem) rotate(-45deg);
+  }
+}
+@keyframes firstLineToBurger {
+  0% {
+    transform: translateY(0.5625rem) rotate(45deg);
+  }
+  50% {
+    transform: translateY(0.5625rem) rotate(0);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
+@keyframes secondLineShow {
+  0% {
+    opacity: 0;
+    transform: scaleX(0);
+  }
+  50% {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+}
+@keyframes thirdLineToBurger {
+  0% {
+    transform: translateY(-0.5625rem) rotate(-45deg);
+  }
+  50% {
+    transform: translateY(-0.5625rem) rotate(0);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
