--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,12 @@
 @use 'blocks/offers';
 @use 'blocks/card-features';
 
+@use 'blocks/plans';
+@use 'blocks/card-plans';
+@use 'blocks/slider';
+@use 'blocks/footer';
+@use 'blocks/soc1als';
+
 // .header,
 // main > *:not(:last-child),
 // .footer {
