--- a/css/main.css
+++ b/css/main.css
@@ -1029,6 +1029,9 @@ a[class] {
   width: 100%;
   max-width: 21.25rem;
   user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .footer {
