--- a/css/main.css
+++ b/css/main.css
@@ -1010,6 +1010,7 @@ a[class] {
   column-gap: 5rem;
   row-gap: 1.875rem;
   touch-action: pan-y;
+  cursor: grab;
   -webkit-user-drag: none;
 }
 @media (width <= 63.99875rem) {
@@ -1029,6 +1030,9 @@ a[class] {
   width: 100%;
   max-width: 21.25rem;
   user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .footer {
